Parte 2: js, y finalizacion de proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="img/img1.jpg" alt="" class="card-img">
+                            <img src="img/profile1.jpg" alt="" class="card-img">
                         </div>
                     </div>
                     <div class="card-content">
@@ -33,7 +33,7 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="img/img1.jpg" alt="" class="card-img">
+                            <img src="img/profile2.jpg" alt="" class="card-img">
                         </div>
                     </div>
                     <div class="card-content">
@@ -48,7 +48,7 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="img/img1.jpg" alt="" class="card-img">
+                            <img src="img/profile3.jpg" alt="" class="card-img">
                         </div>
                     </div>
                     <div class="card-content">
@@ -63,7 +63,7 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="img/img1.jpg" alt="" class="card-img">
+                            <img src="img/profile4.jpg" class="card-img">
                         </div>
                     </div>
                     <div class="card-content">
@@ -78,7 +78,7 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="img/img1.jpg" alt="" class="card-img">
+                            <img src="img/profile5.jpg" alt="" class="card-img">
                         </div>
                     </div>
                     <div class="card-content">
@@ -93,7 +93,52 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="img/img1.jpg" alt="" class="card-img">
+                            <img src="img/profile6.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name"> David Dell</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                            placeat soluta, beatae iure expedita amet, sed quos consequuntur maiores voluptas unde
+                            asperiores est sit</p>
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/profile7.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name"> David Dell</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                            placeat soluta, beatae iure expedita amet, sed quos consequuntur maiores voluptas unde
+                            asperiores est sit</p>
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/profile8.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name"> David Dell</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                            placeat soluta, beatae iure expedita amet, sed quos consequuntur maiores voluptas unde
+                            asperiores est sit</p>
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/profile9.jpg" alt="" class="card-img">
                         </div>
                     </div>
                     <div class="card-content">
@@ -106,8 +151,8 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
         <div class="swiper-pagination"></div>
     </div>
 </body>
